--- a/user-management-app/frontend/index.html
+++ b/user-management-app/frontend/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>User Management App</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>User Management App</title>
+    <link rel="stylesheet" href="/public/style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+    <div id="app"></div>
+
+    <div id="message-container"></div>
+
+    <script type="module" src="/src/app.js"></script>
 </body>
 </html>
